css/styles.css
@import "./nav.css";

@font-face {
    font-family: 'Futura Standard';
    font-weight: normal;
    src: url('../fonts/futura/FuturaStd-Book.otf');
}
@font-face {
    font-family: 'Futura Standard';
    font-weight: bold;
    src: url('../fonts/futura/FuturaStd-Heavy.otf');
}
body {
    overflow-x: hidden;
    font-family: 'Futura Standard';
}
#main {
    overflow: hidden;
    width: 100%;
    font-size: 20px;
}
section {
    position: relative;
    width: 100vw;
}
section:first-child {
    margin-top: 75px;
    height: 130vh;
    margin-bottom: calc(59.8vh - 301px);
}
section:nth-child(2) {
    height: 280vh;
}
footer {
    background-color: #03141E;
    color: white;
    z-index: 10;
}
#about-text {
  position: absolute;
  z-index: 5;
  bottom: -100px;
  height: auto;
  color: white;
  width: 100%;
}
#about-text h1 {
  font-size: 35px;
  font-weight: bold;
}
#about-text p {
  font-size: 23px;
  padding-right: 100px;
  padding-left: 50px;
}
.row {
  display: flex;
  align-items: center;
  justify-content: center;
}
.img-absolute {
    position: absolute;
}
object[data="img/clouds.svg"] {
    width:60%;
}
img[src="img/sunsetbottom.png"] {
    z-index: -1;
    width: 100%;
}
img[src="img/logowhitewebsite.png"] {
    width:20vw;
    height: 20vw;
    left: 50%;
    margin-left: -10vw;
    top: 30%;
    margin-top: -10vw;
    z-index: 4;
}
object[data="img/backgroundsky.svg"] {
    width: 100%;
    height: 80%;
    margin-top: -20vh;
}
object[data="img/roadcowshills.svg"] {
    top: 20%;
    min-width: 900px;
    margin-left: -5px;
    width: calc(100% + 5px);
}
object[data="img/cowandsquirrel.svg"] {
    width: calc(100% + 5px);
    height: auto;
    bottom: -46%;
    margin-left: -5px;
    z-index:5;
}
object[data="img/mountains top.svg"] {
    top: 10%;
    width: 100%;
    min-width: 900px;
}
object[data="img/soilcave1.svg"] {
    top: -20px;
    z-index: 4;
}
object[data="img/cave2.svg"] {
    top: 10%;
    right: -9%;
    width: 60%;
    z-index: 3;
}
object[data="img/cave3.svg"] {
    top: 10%;
    width: 60%;
    right: 0;
    z-index:2;
}
object[data="img/mountains.svg"] {
    bottom: 20%;
    width: 100%;
    z-index:1;
}
object[data="img/mountain 1.svg"] {
    bottom:20%;
    width: 100%;
    z-index:2;
}
object[data="img/mountain 3.svg"] {
    bottom: 20%;
    width: 100%;
    margin-left: -10%;
    z-index: 3;
}
object[data="img/tree layer1.svg"] {
    bottom: 0;
    z-index:4;
}
object[data="img/tree layer2.svg"] {
    bottom: 0;
    z-index:5;
}
object[data="img/tree layer3.svg"] {
    bottom: 0;
    z-index:6;
}
@media (max-width: 1400px) {
    #main {
        font-size: 16px;
    }
}
@media (max-width: 1000px) {
    #main {
        font-size: 12px;
    }
}

